--- a/html_includes/css/news.scss
+++ b/html_includes/css/news.scss
@@ -1,8 +1,19 @@
 $quicktabs-backcolor: #e8ebed;
+$quicktabs-height: 28px;
 $dropshadow-color: #e2e5e7;
 
 body {
-    overflow: hidden;
+    overflow : hidden;
+    min-width: 800px;
+}
+
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select  : none;
+    -khtml-user-select   : none;
+    -moz-user-select     : none;
+    -ms-user-select      : none;
+    user-select          : none;
 }
 
 .news-container {
@@ -24,17 +35,35 @@ body {
     background-color: $quicktabs-backcolor;
     width           : 100%;
     height          : 60px;
+    padding-left    : 60px;
 
-    .tab {
+    .topbar-tab {
         border-radius: 3px;
         color        : #436790;
+        position     : relative;
+        top          : 17px;
+        display      : inline-block;
+        text-align   : center;
+        margin-right : 10px;
+        cursor       : pointer;
+        height       : $quicktabs-height;
+        line-height  : $quicktabs-height;
+        padding      : 0 12px;
 
-        .selected {
+        &.selected {
             background-color: #527397;
             color           : white;
+
+            &:hover {
+                background-color: #6087b2;
+            }
+
+            &:active {
+                background-color: #456a93;
+            }
         }
 
-        .hover {
+        &:hover {
             background-color: #dae1e6;
         }
     }
@@ -62,12 +91,10 @@ body {
 #news-page {
     position: relative;
     height  : 100%;
-    overflow: hidden;
 
     .news-item {
         position  : absolute;
         width     : 44%;
-        min-width : 490px;
         box-shadow: 0 0 5px $dropshadow-color;
 
         .header {
